deployment/cluster/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: planetwide-istio-gateway
  namespace: planetwide
spec:
  selector:
    app.kubernetes.io/instance: planetwide
    app.kubernetes.io/name: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: planetwide-service
  namespace: planetwide
spec:
  hosts:
    - "*"
  gateways:
    - default
